@@ -67,6 +67,8 @@ Merged from 3.0:
 Merged from 2.2:
  * Fail repair on non-existing table (CASSANDRA-12279)
  * Enable repair -pr and -local together (fix regression of CASSANDRA-7450) (CASSANDRA-12522)
+Merged from 2.1:
+ * Fix merkle tree depth calculation (CASSANDRA-12580)
 
 
 3.8, 3.9
